# schedula

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT_INSTRUCTIONS.md  LICENSE  MVP_OUTLINE.md  Makefile  PRODUCTION_AUDIT.md  PRODUCT_REQUIREMENTS.md  PROJECT.md  PROJECT_STATUS.md  README.md  RELEASE_GUIDE.md  USER_PAIN_POINTS.md  hub-secret.key  index.html  package-lock.json  package.json  render.yaml  schedula-hub.db-shm  schedula-hub.db-wal  vite.config.js
.github/workflows/: deploy-landing.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
docs/: ARCHITECTURE.md  DATABASE_SCHEMA.md  HUB_ARCHITECTURE.md  SCHEDULER_ALGORITHM.md  TESTING_GUIDE.md
hub-server/: Cargo.toml
hub-server/keys/: license_public.pem
hub-server/src/: auth.rs  db.rs  handlers.rs  license.rs  main.rs  models.rs  scheduler.rs
hub-server/ui/: index.html
landing/: index.html
landing/samples/: large-school-courses.csv  large-school-lecturers.csv  large-school-rooms.csv  small-school-courses.csv  small-school-lecturers.csv  small-school-rooms.csv  university-courses.csv  university-lecturers.csv  university-rooms.csv
license-server/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  fly.toml
license-server/src/: billing.rs  main.rs
scripts/: build-hub-sidecar.sh
src/: App.svelte  app.css
src-tauri/: Cargo.toml  gen_icons.py  tauri.conf.json  tauri.macos-ci.conf.json
src-tauri/benches/: scheduler_bench.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  db_tests.rs  hub.rs  lib.rs  models.rs  scheduler.rs
src/lib/: api.js  toast.js
src/lib/components/: DaySelect.svelte  Modal.svelte  Onboarding.svelte  Reports.svelte  SemesterCalendar.svelte  Sidebar.svelte  Timetable.svelte  UpgradePrompt.svelte
src/lib/stores/: prefs.js  session.js  syncMode.js  ws.js
src/views/: Approvals.svelte  Batches.svelte  Courses.svelte  Dashboard.svelte  Import.svelte  Lecturers.svelte  Login.svelte  Organizations.svelte  Rooms.svelte  Schedule.svelte  Semesters.svelte  Settings.svelte  Setup.svelte  Users.svelte
