[package]
name = "schedula-hub"
version = "0.1.0"
edition = "2021"
description = "Schedula Hub Server — real-time sync server for multi-machine deployments"

[[bin]]
name = "schedula-hub"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
bcrypt = "0.15"
rand = "0.8"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
