[package]
name = "schedula-license"
version = "0.1.0"
edition = "2021"
description = "Schedula License Server — issues and validates RS256 license JWTs"

[[bin]]
name = "schedula-license"
path = "src/main.rs"

[dependencies]
axum             = { version = "0.7", features = ["macros"] }
tokio            = { version = "1", features = ["full"] }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
rusqlite         = { version = "0.32", features = ["bundled"] }
jsonwebtoken     = "9"
chrono           = { version = "0.4", features = ["serde"] }
uuid             = { version = "1",   features = ["v4"] }
clap             = { version = "4",   features = ["derive", "env"] }
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http       = { version = "0.6", features = ["cors"] }
reqwest          = { version = "0.12", features = ["json"] }
lettre           = { version = "0.11", features = ["tokio1-native-tls"] }
hmac             = "0.12"
sha2             = "0.10"
hex              = "0.4"
